src/test/resources/cocos/valid/imports/cyclicImport/Vehicles.sysml
package Vehicles{
	package a{
	  import Vehicles::b::*;
	}
	package b{
    import Vehicles::a::*;
  }
}